Correcting flex wrap behavior for price section. Correcting font weight for item label.

--- a/src/app/components/filter/filter.component.scss
+++ b/src/app/components/filter/filter.component.scss
@@ -1,14 +1,21 @@
-.price-range {
-  margin-bottom: 10px;
-  
-  .ng5-slider .ng5-slider-pointer {
-    width: 20px;
-    height: 20px;
-    top: -8px;
-  
-    &::after {
-      width: 0;
-      height: 0;
+.filter-wrapper {
+
+  .section-title {
+    font-weight: bold;
+  }
+
+  .price-range {
+    margin-bottom: 10px;
+
+    .ng5-slider .ng5-slider-pointer {
+      width: 20px;
+      height: 20px;
+      top: -8px;
+
+      &::after {
+        width: 0;
+        height: 0;
+      }
     }
   }
 }
